--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "corsless.fullname" . }}
+  name: {{ include "corsless.name" . }}
   labels:
     {{- include "corsless.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
@@ -35,7 +35,7 @@ spec:
             {{- end }}
             backend:
               service:
-                name: {{ include "corsless.fullname" $ }}
+                name: {{ include "corsless.name" $ }}
                 port:
                   number: {{ $.Values.service.port }}
           {{- end }}
