--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "corsless.fullname" . }}
+  name: {{ include "corsless.name" . }}
   labels:
     {{- include "corsless.labels" . | nindent 4 }}
 spec:
